[package]
name = "osc-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "osc-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = { version = "6", features = ["macos_fsevent"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
sysinfo = "0.30"
tokio-util = { version = "0.7", features = ["io"] }
rcgen = { workspace = true }
x509-parser = { workspace = true }
pem = "3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
